# nomopy

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  environment.yml  pyproject.toml  setup.py
doc/: README.txt  conf.py  example.rst  index.rst  installation.rst  modules.rst
examples/: Quick_Example.ipynb
nomopy/fhmm/: FHMM.py  __init__.py  convergence_monitor.py  exact_hessian.py  numba_utilities.py
nomopy/hos/: __init__.py  secondspectrum.py
nomopy/noise/: __init__.py  tlf.py
tests/: generate_refactor_e_step_data.py  test_FHMM.py  test_chi2_test_gaussianity.py  test_convergence_monitor.py  test_numba_utilities.py  test_second_spectrum.py  test_thermal_tlf_model.py
tests/refactor_data/: random_exact_e_step_data.pkl  random_gibbs_e_step_data.pkl  random_mean_field_e_step_data.pkl  random_sva_e_step_data.pkl
