[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nomopy"
version = "0.1.1"
authors = [
    {name = "Dylan Albrecht, Toby Jacobson, Rohith Vudatha"},
]
description = "Noise Modeling in Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Development Status :: 4 - Beta",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS'
]
dependencies = [
    'numpy >= 1.11.1',
    'scipy >= 1.5.2',
    'matplotlib >= 1.5.1',
    'scikit-learn >= 0.23.2',
    'joblib >= 0.17.0',
    'autograd >= 1.3',
]
requires-python = ">=3.7"

[project.optional-dependencies]
tests = [
    'pytest',
    'numpy',
    'hypothesis'
]

[project.urls]
Documentation = "https://nomopy.readthedocs.io"
Repository = "https://github.com/sandialabs/nomopy"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "refactor_nomopy010: marks test that matches against nomopy version 0.1.0",
]
